# inspyrd-contracts

./: README.md
Rust/Auction/program/: Cargo.toml  README.md
Rust/NFT_mint/program/: Cargo.toml  README.md
Rust/NFT_mint/program/src/: lib.rs  utils.rs
Rust/NFT_swap/program/: Cargo.toml  README.md
Rust/Sale/program/: Cargo.toml  README.md
Solidity/NFT_auction/: .gitignore  addresses.txt  hardhat.config.ts  package.json
Solidity/NFT_auction/contracts/: ERC20MockContract.sol  ERC721MockContract.sol  NFTAuction.sol  attackerContract.sol
Solidity/NFT_auction/deploy/: 01_deployContracts.js
Solidity/NFT_auction/types/: AttackerContract.ts  ERC20MockContract.ts  NFTAuction.ts  hardhat.d.ts  index.ts
Solidity/NFT_marketplace_sale/: .gitignore  arguments.js  hardhat.config.ts  package.json
Solidity/NFT_marketplace_sale/contracts/: NFTsale.sol
Solidity/NFT_marketplace_sale/deploy/: 01_deployContracts.js
Solidity/NFT_marketplace_sale/scripts/: deploy.js
Solidity/NFT_mint/: .env example  .gitignore  arguments.js  package-lock.json
Solidity/NFT_mint/contracts/: NFTmint.sol
Solidity/NFT_mint/deploy/: 01_deployContracts.js
Solidity/NFT_mint/scripts/: deploy.js
Solidity/NFT_swap/: arguments.js
Solidity/NFT_swap/contracts/: NFTAuction.sol
Solidity/NFT_swap/deploy/: 01_deployContracts.js
Solidity/NFT_swap/scripts/: deploy.js
sol/NFT-auction/: package.json
sol/NFT-auction/contracts/: NFTAuction.sol
sol/NFT-auction/test/: full-auction-tests.js
sol/NFT-auction/types/: ERC721MockContract.ts  NFTAuction.ts  hardhat.d.ts  index.ts
(+36 files in other folders)
