[workspace]
[package]
name = "mpl-inspyrd-machine"
version = "1.0.0"
description = "NFT Inspyrd Machine v2: programmatic and trustless NFT drops."
license = "Apache-2.0"
edition = "2022"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "~0.19.0"
arrayref = "~0.3.6"
spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version = "~1.1.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
anchor-spl = "~0.19.0"
solana-program = "~1.9.5"
solana-gateway = "~0.1.1"
